# rag-agentic-ecommerce

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  ingest.py  init.sql  main.py  pyproject.toml  requirements.txt  start.sh
.amazonq/rules/: instructions.md  private.md  progress.md
.claude/agents/: rag-langgraph-engineer.md
.kiro/steering/: product.md  structure.md  tech.md
agentic/: requirements.txt  system_message.py
agentic/agents/: orchestrator.py
agentic/api/: main.py
agentic/database/: connection.py  models.py
agentic/factory/: embedding.py  llm.py  types.py
agentic/tools/: semantic_search.py  structured_filter.py
agentic/utils/: analyze.py  get_env.py
database/: README.md  package-lock.json  package.json  schema.prisma  seed.ts
embedding/: README.md  ingest.py  model_factory.py  requirements.txt
embedding/factory/: embedding.py
idea/: application.md  architecture.md  plan.md  progress.md  tech-rules.md  tools.md
src/agents/: orchestrator.py
src/api/: main.py
src/database/: connection.py
src/tools/: semantic_search.py  structured_filter.py
tasks/: README.md
tasks/phase1-conversational-memory/: 01-uncomment-message-persistence.md  02-update-agent-state.md  03-create-preference-extractor.md  04-implement-preference-logic.md  05-add-reranking-node.md  06-update-langgraph-workflow.md  07-test-multi-turn.md
tasks/phase2a-multi-aspect-embeddings/: 01-design-embedding-schema.md  02-create-migration.md  03-apply-migration.md  04-update-ingest.md  05-reingest-products.md  (+5 more)
web/: package.json  pnpm-lock.yaml
(+70 files in other folders)
